logs/dag_id=postgre_insert/run_id=manual__2022-06-17T090210.992493+0000/task_id=create_pet_table/attempt=1.log
[2022-06-17 09:02:22,688] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: postgre_insert.create_pet_table manual__2022-06-17T09:02:10.992493+00:00 [queued]>
[2022-06-17 09:02:22,820] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: postgre_insert.create_pet_table manual__2022-06-17T09:02:10.992493+00:00 [queued]>
[2022-06-17 09:02:22,849] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2022-06-17 09:02:22,872] {taskinstance.py:1357} INFO - Starting attempt 1 of 1
[2022-06-17 09:02:22,885] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2022-06-17 09:02:23,225] {taskinstance.py:1377} INFO - Executing <Task(PostgresOperator): create_pet_table> on 2022-06-17 09:02:10.992493+00:00
[2022-06-17 09:02:23,389] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'postgre_insert', 'create_pet_table', 'manual__2022-06-17T09:02:10.992493+00:00', '--job-id', '510', '--raw', '--subdir', 'DAGS_FOLDER/postgre_conn.py', '--cfg-path', '/tmp/tmp16txxlvx', '--error-file', '/tmp/tmpavt3s56y']
[2022-06-17 09:02:23,408] {standard_task_runner.py:80} INFO - Job 510: Subtask create_pet_table
[2022-06-17 09:02:23,453] {standard_task_runner.py:52} INFO - Started process 3049 to run task
[2022-06-17 09:02:24,263] {task_command.py:370} INFO - Running <TaskInstance: postgre_insert.create_pet_table manual__2022-06-17T09:02:10.992493+00:00 [running]> on host fe209149cfc1
[2022-06-17 09:02:25,625] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=postgre_insert
AIRFLOW_CTX_TASK_ID=create_pet_table
AIRFLOW_CTX_EXECUTION_DATE=2022-06-17T09:02:10.992493+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-06-17T09:02:10.992493+00:00
[2022-06-17 09:02:25,837] {base.py:68} INFO - Using connection ID 'postgres_conn' for task execution.
[2022-06-17 09:02:25,913] {dbapi.py:213} INFO - Running statement: 
                CREATE TABLE IF NOT EXIST Store_Sales (
                ID INT generated by default as identity primary key ,
                STX_ID INT,
                STORE_NAME varchar(250),
                PAID_PRICE numeric(10,2),
                TRX_STATUS INT,
                STORE_STATUS INT,
                STORE_LIVE_DATE TIMESTAMP ,
                SALES_CREATE_DATE TIMESTAMP 
                );
                              , parameters: None
[2022-06-17 09:02:25,987] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 193, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 217, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "EXIST"
LINE 2:                 CREATE TABLE IF NOT EXIST Store_Sales (
                                            ^

[2022-06-17 09:02:26,138] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=postgre_insert, task_id=create_pet_table, execution_date=20220617T090210, start_date=20220617T090222, end_date=20220617T090226
[2022-06-17 09:02:26,497] {standard_task_runner.py:97} ERROR - Failed to execute job 510 for task create_pet_table (syntax error at or near "EXIST"
LINE 2:                 CREATE TABLE IF NOT EXIST Store_Sales (
                                            ^
; 3049)
[2022-06-17 09:02:26,633] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-06-17 09:02:27,190] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
